--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,14 @@
             <version>3.0.0</version>
         </dependency>
 
+        <!-- JWT 用作生成token -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.19.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
