--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
             <version>3.19.0</version>
         </dependency>
 
+        <!-- WebSocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.6.6</version>
+        </dependency>
+
 
     </dependencies>
 
