完成充电桩修改模块数据对接

--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
             <version>2.6.6</version>
         </dependency>
 
+        <!-- jackson-datatype-jsr310  和Java8时间API相匹配的 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
 
     </dependencies>
 
